...
            android:layout_height="match_parent"
            android:background="@color/dark_700"
            android:scaleType="centerCrop"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_imsak_info_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp16"
                android:layout_marginTop="@dimen/dp16"
                android:text="@string/imsak_info"
                android:textSize="@dimen/sp20"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_imsak_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp16"
                android:layout_marginTop="@dimen/dp4"
                android:layout_marginBottom="@dimen/dp4"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_imsak_info_title"
                tools:text="April 24 2020" />

            <TextView
                android:id="@+id/tv_city"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp16"
                android:layout_marginTop="@dimen/dp4"
                android:layout_marginBottom="@dimen/dp16"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_imsak_date"
                tools:text="Surakarta" />

            <TextView
                android:id="@+id/tv_imsak_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/dp16"
                android:text="@string/loading"
                android:textSize="@dimen/sp30"
                app:layout_constraintBottom_toBottomOf="parent"
...
                        android:layout_height="match_parent"
                        android:layout_margin="@dimen/dp4"
                        android:fontFamily="@font/sourcesanspro_bold"
                        android:text="@string/date" />

                    <TextView
                        android:id="@+id/tv_gregorian_date"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="@dimen/dp4"
                        android:text="@string/loading"
                        tools:text="01-03-2020" />

                    <TextView
                        android:id="@+id/tv_hijri_date"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="@dimen/dp4"
                        android:text="@string/loading"
                        tools:text="06-07-1441" />
                </TableRow>
...
                        android:layout_height="match_parent"
                        android:layout_margin="@dimen/dp4"
                        android:fontFamily="@font/sourcesanspro_bold"
                        android:text="@string/month" />

                    <TextView
                        android:id="@+id/tv_gregorian_month"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="@dimen/dp4"
                        android:text="@string/loading"
                        tools:text="March" />

                    <TextView
                        android:id="@+id/tv_hijri_month"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="@dimen/dp4"
                        android:text="@string/loading"
                        tools:text="Rajab / رَجَب" />
                </TableRow>
...
                        android:layout_height="match_parent"
                        android:layout_margin="@dimen/dp4"
                        android:fontFamily="@font/sourcesanspro_bold"
                        android:text="@string/day" />

                    <TextView
                        android:id="@+id/tv_gregorian_day"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="@dimen/dp4"
                        android:text="@string/loading"
                        tools:text="Sunday" />

                    <TextView
                        android:id="@+id/tv_hijri_day"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="@dimen/dp4"
                        android:text="@string/loading"
                        tools:text="Al Ahad / الاحد" />
                </TableRow>
...
                    android:text="@string/dua_collection"
                    android:textSize="@dimen/sp20"
                    android:textStyle="bold" />
            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvDuaCollection"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginBottom="@dimen/dp4"
                app:spanCount="2"
                app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                tools:listitem="@layout/list_dua" />
...
