...

        </TableRow>

        <!--Fajr-->
        <TableRow>

            <CheckBox android:id="@+id/cb_fajr" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/dp4"
                android:gravity="start|center"
...
        </TableRow>

        <!--Dhuhur-->
        <TableRow>

            <CheckBox
                android:id="@+id/cb_dhuhr"
                android:layout_width="@dimen/list_width_size"
                android:layout_height="@dimen/list_width_size" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
...
        </TableRow>

        <!--Asr-->
        <TableRow>

            <CheckBox
                android:id="@+id/cb_asr"
                android:layout_width="@dimen/list_width_size"
                android:layout_height="@dimen/list_width_size" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
...
                android:textStyle="bold" />
        </TableRow>

        <!--Maghrib-->
        <TableRow>

            <CheckBox android:id="@+id/cb_maghrib" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/dp4"
                android:gravity="start|center"
...
                android:textStyle="bold" />
        </TableRow>

        <!--Isha-->
        <TableRow>

            <CheckBox android:id="@+id/cb_isha" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/dp4"
                android:gravity="start|center"
...
